--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-	<h1>Examples</h1>
+	<!-- <h1>Examples</h1> -->
 	<div class="wrapper">
 	    <div id="vis0"></div>
 	    <div id="vis1"></div>
