--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
 	<div class="wrapper">
 	    <div id="vis0"></div>
 	    <div id="vis1"></div>
+	    <div id="vis11"></div>
 	</div>
 	<div class="wrapper">
 	    <div id="vis2"></div>
@@ -24,6 +25,10 @@
 	<div class="wrapper">
 	    <div id="vis4"></div>
 	    <div id="vis5"></div>
+	</div>
+	<div class="wrapper">
+	    <div id="vis6"></div>
+	    <div id="vis7"></div>
 	</div>
 
 	<script src="index.js"></script>
