--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
 <body>
 	<!-- <h1>Examples</h1> -->
 	<div class="wrapper">
+		<div id="lucasPractice"></div>
 	    <div id="vis0"></div>
 	    <div id="vis1"></div>
 	    <div id="vis11"></div>
